= master

* Add hmac_paths plugin for preventing path enumeration and supporting access control (jeremyevans)

= 3.78.0 (2024-03-13)

* Add permissions_policy plugin for setting Permissions-Policy header (jeremyevans)

= 3.77.0 (2024-02-12)

* Support formaction/formmethod attributes in forms in route_csrf plugin (jeremyevans)

= 3.76.0 (2024-01-12)

* Support :filter plugin option in error_mail and error_email for filtering parameters, environment variables, and session values (jeremyevans) (#346)

* Set temporary name on Ruby 3.3 in middleware plugin for middleware class created (janko) (#344)

* Add break plugin, for using break inside a routing block to return from the block and keep routing (jeremyevans)

= 3.75.0 (2023-12-14)

* Add cookie_flags plugin, for overriding, warning, or raising for incorrect cookie flags (jeremyevans)

= 3.74.0 (2023-11-13)

* Add redirect_http_to_https plugin, helping to ensure future requests from the browser are submitted via HTTPS (jeremyevans)

= 3.73.0 (2023-10-13)

* Support :next_if_not_found option for middleware plugin (jeremyevans) (#334)

* Remove dependency on base64 library from sessions and route_csrf plugin, as it will not be part of the standard library in Ruby 3.4+ (jeremyevans)

= 3.72.0 (2023-09-12)

* Add invalid_request_body plugin for custom handling of invalid request bodies (jeremyevans)

* Warn when defining method that expects 1 argument when block requires multiple arguments when :check_arity option is set to :warn (jeremyevans)

* Implement the match_hooks plugin using the match_hook_args plugin (jeremyevans)

= 3.71.0 (2023-08-14)

* Add match_hook_args plugin, similar to match_hooks but support matchers and block args as hook arguments (jeremyevans)

= 3.70.0 (2023-07-12)

* Add plain_hash_response_headers plugin, using a plain hash for response headers on Rack 3 for much better performance (jeremyevans)
